--- a/styles.css
+++ b/styles.css
@@ -187,36 +187,29 @@ nav ul li a.active {
     object-fit: contain; /* Ensure the image is not distorted */
 }
 
-/* About My Work Section */
-#about-my-work {
-    display: flex; /* Use flexbox to align items horizontally */
+/* About Work Section */
+#about-work {
+    display: flex; /* Flexbox layout */
     align-items: center; /* Vertically center the content */
-    justify-content: flex-start; /* Align the content to the left */
-    width: 100%; /* Ensure the section takes up the full width of the page */
-    position: relative;
+    justify-content: flex-start; /* Keep image on the left */
+    gap: 20px; /* Add space between image and text */
 }
 
-#about-my-work .container {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end; /* Align the entire container content to the right */
-    padding-right: 20px; /* Add some padding to the right for spacing */
+#about-work .text {
+    width: 60%; /* Text takes up 60% of the container */
+    text-align: left; /* Align text to the left */
 }
 
-#about-my-work .text {
-    width: 60%; /* Text will take up 60% of the container */
-    text-align: right; /* Align text to the right */
+#about-work .image {
+    width: 30%; /* Reduced width of the image */
 }
 
-#about-my-work .image {
-    width: 35%; /* Image will take up 35% of the container */
-}
-
-#about-my-work .image img {
-    width: 100%; /* Make sure the image fills the container */
+#about-work .image img {
+    width: 100%; /* Make the image fill the container */
     height: auto; /* Maintain aspect ratio */
     object-fit: contain; /* Ensure the image is not distorted */
 }
+
 
 /* My Services Section */
 #my-services {
