--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,8 @@ nav ul li a.active {
     width: 60%; /* Text takes up 60% of the container */
     text-align: right; /* Align text to the right */
     margin-left: auto; /* Push the text container to the right */
+    font-size: 1.5em; /* Increase font size to make it larger */
+    line-height: 1.7; /* Adjust line height for better readability */
 }
 
 #about-me .image {
@@ -191,7 +193,9 @@ nav ul li a.active {
 
 #about-my-work .text {
     width: 60%; /* Text will take up 60% of the container */
-    text-align: left; /* Align text to the left */
+    text-align: right; /* Align text to the right */
+    font-size: 1.5em; /* Increase font size to make the text bigger */
+    line-height: 1.7; /* Adjust line height for better readability */
 }
 
 #about-my-work .image {
@@ -215,6 +219,8 @@ nav ul li a.active {
 #my-services .text {
     width: 60%; /* Text takes up 60% of the container */
     text-align: left; /* Align text to the left */
+    font-size: 1.5em; /* Increase font size to make the text bigger */
+    line-height: 1.7; /* Adjust line height for better readability */
 }
 
 #my-services .image {
@@ -226,6 +232,7 @@ nav ul li a.active {
     height: auto; /* Maintain aspect ratio */
     object-fit: contain; /* Ensure the image is not distorted */
 }
+
 
 /* Add border between specific sections */
 #introduction {
