--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Body */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f9f9f9; /* Soft light background */
+    background-color: #808080; /* Soft light background */
     color: white;
     line-height: 1.6;
     font-size: 17px; /* Slightly larger font for better readability */
