--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,12 @@ nav ul li a.active {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
 }
 
+.rotate {
+  transform: rotate(-45deg);
+  display: inline-block;
+}
+
+
 
 /* Footer */
 footer {
